[package]
name = "pay"
version = "0.1.0"
authors = ["diogo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.16"
log = "0.4.14"
env_logger = "0.9.0"
async-channel = "1.6.1"
futures-lite = "1.12.0"
rust_decimal = "1.15.0"
